--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -11,3 +11,25 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: 'Montserrat';
+  src: local('Montserrat'),
+    url(./fonts/Montserrat-Regular.ttf) format('truetype');
+  font-weight: bold;
+}
+
+.font-montserrat-regular{
+  font-family: "Montserrat";
+}
+
+@font-face {
+  font-family: 'Montserrat-Light';
+  src: local('Montserrat-Light'),
+    url(./fonts/Montserrat-Light.ttf) format('truetype');
+  font-weight: bold;
+}
+
+.font-montserrat-light{
+  font-family: "Montserrat-Light";
+}
