--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -48,3 +48,21 @@ body {
   font-family: 'Montserrat-Light';
 }
 
+.item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  user-select: none;
+}
+
+.item-1 {
+  background-color:aqua;
+}
+
+.item-2 {
+  background-color: blueviolet;
+}
+
+.item-3{
+  background-color: blue;
+}
