--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,32 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
 
 @keyframes App-logo-spin {
   from {
@@ -36,13 +7,11 @@
     transform: rotate(360deg);
   }
 }
-body {
-  height: 2000px;
-}
+
 
 .font-montserrat-regular {
   font-family: 'Montserrat';
-  font-size: '124px';
+
 }
 .font-montserrat-light{
   font-family: 'Montserrat-Light';
@@ -65,4 +34,11 @@ body {
 
 .item-3{
   background-color: blue;
+}
+
+.info-hr {
+  margin-top: -7%;
+  width: 32%;
+  margin-left: 34%;
+  border-top: 4  px solid black;
 }
