--- a/my-app/src/Companents/Team/Team.css
+++ b/my-app/src/Companents/Team/Team.css
@@ -1,16 +1,12 @@
 .team-box{
-    display: flexbox;
-    flex-direction: column;
+    overflow: hidden;
 }
-.our-team{
-    height: 200px;
-    border: 1px solid black;
-    display: flex;
-    width: 100%;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-}
-/* .our-team a{
+.separator{ 
+    margin-left: 14%;
+    height: 120px;
 
-} */
+}
+.separator a{
+    font-family: 'Montserrat-Medium';
+    font-size: 25px;
+}
