--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -19,6 +19,13 @@ code {
   font-weight: bold;
 }
 
+@font-face {
+  font-family: 'Montserrat-Black';
+  src: local('Montserrat-Black'),
+    url(./fonts/Montserrat-Black.ttf) format('truetype');
+  font-weight: bold;
+}
+
 .font-montserrat-regular{
   font-family: "Montserrat";
 }
@@ -27,6 +34,18 @@ code {
   font-family: 'Montserrat-Light';
   src: local('Montserrat-Light'),
     url(./fonts/Montserrat-Light.ttf) format('truetype');
+  font-weight: bold;
+}
+@font-face {
+  font-family: 'Montserrat-Medium';
+  src: local('Montserrat-Medium'),
+    url(./fonts/Montserrat-Medium.ttf) format('truetype');
+  font-weight: bold;
+}
+@font-face {
+  font-family: 'Montserrat-SemiBold';
+  src: local('Montserrat-SemiBold'),
+    url(./fonts/Montserrat-SemiBold.ttf) format('truetype');
   font-weight: bold;
 }
 
