--- a/my-app/src/Companents/Team/Team.css
+++ b/my-app/src/Companents/Team/Team.css
@@ -1,12 +1,36 @@
 .team-box{
     overflow: hidden;
+    margin-bottom: 100px;
 }
-.separator{ 
-    margin-left: 14%;
-    height: 120px;
+
+.team-box h1{
+    color:black;
+    font-family: 'Montserrat-Medium';
+    text-align: center;
+    margin-top: 3%;
 
 }
+
+.separator{ 
+    margin-left: 13%;
+    height: 120px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    margin-bottom: 35px;
+}
+
 .separator a{
     font-family: 'Montserrat-Medium';
-    font-size: 25px;
+    font-size: 30px;
+
+}
+
+.separator hr{
+    width: 250px;
+    height: 1px;
+    background-color: black;
+    margin-left: 1%;
+    margin-bottom: 0.8%;
+    
 }
