--- a/my-app/src/Companents/Advantages/Advantages.css
+++ b/my-app/src/Companents/Advantages/Advantages.css
@@ -1,6 +1,6 @@
 .adv-body{
     width: 100%;
-    height: 525px;
+    height: 450px;
     background-image: url('../../assets/advantagesImg/advbgImg.png');
 }
 
@@ -12,6 +12,7 @@
     display: flex;
     color: white;
     justify-content: space-between;
+    align-items: center;
 }
 
 .adv-item{
@@ -23,10 +24,9 @@
 }
 
 .adv-item img{
-    margin-top: 35px;
     padding: 19px 20px 22px 20px;
     width: 115px;
-    border: 13px solid white;
+    border: 15px solid white;
     border-radius: 100px;
 }
 
@@ -37,7 +37,7 @@
 }
 
 .adv-item a{
-    font-size: 27px;
+    font-size: 24px;
     font-family: 'Montserrat-Light';
 
 }
