--- a/my-app/src/Companents/PartnerBrands/PartnerBrands.css
+++ b/my-app/src/Companents/PartnerBrands/PartnerBrands.css
@@ -1,17 +1,17 @@
 .pb-body{
+    padding-top: 40px;
     width: 100%;
-    height: 600px;
+    height: 550px;
     background-color:#474747;
     display: flex;
     flex-direction: column;
 }
 
 .first-line{
-    width: 60%;
+    width: 70%;
     margin-left: auto;
     margin-right: auto;
-    height: 50%;
-    background-color: rgb(3, 77, 0);
+    height: 200px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -20,19 +20,17 @@
 
 
 .second-line{
-    width: 60%;
+    width: 70%;
     margin-left: auto;
     margin-right: auto;
-    height: 50%;
-    background-color: rgb(0, 25, 100);
+    height: 200px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
 .pb-item{
-    width: 20%; 
-    border: 1px solid black;
+    width: 300px; 
     color: white;
     justify-content: center;
     text-align:center;
@@ -40,7 +38,7 @@
 }
 .lux a{
     font-size: 48px;
-    line-height: 30px;
+    line-height: 45px;
 }
 .lux b{
     font-size: 84px;
@@ -54,4 +52,27 @@
 }
 .keune b{
     font-size: 64px;
+}
+.terra{
+    display: flex;
+    align-items: center;
+}
+.terra a{
+    font-size: 30px;
+    line-height: 25px;
+}
+.terra h1{
+    font-size: 72px;
+}
+
+.pb-hr h1{
+    color:white;
+    font-size: 20px;
+    font-family: 'Montserrat';
+    text-align: center;
+    margin-top: 60px;
+    margin-bottom: 30px;
+}
+.pb-hr hr{
+    width: 800px;
 }
