--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -42,3 +42,22 @@
   margin-left: 34%;
   border-top: 4  px solid black;
 }
+.hm-au-div h1{
+  margin: 0;
+  font-size: 48px;
+  padding-top: 90px;
+  text-align: center;
+  color: #000000;
+  font-family: 'Montserrat';
+}
+
+.hm-au-div h2{
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  padding-top: 20px;
+  font-size: 32px;
+  color: #474747AB;
+  width: 40%;
+  font-family: 'Montserrat';
+}
