--- a/my-app/src/Companents/ServicesComp/ServicesComp.css
+++ b/my-app/src/Companents/ServicesComp/ServicesComp.css
@@ -1,5 +1,37 @@
 .sc-box{
     width: 100%;
-    height: 1000px;
-    background-color: #5f2121;
+    height: 1400px;
+    display: flex;
+    flex-direction: column;
+    font-family: "Montserrat";
+}
+.sc-box h1{
+    font-size: 35px;
+    text-align: center;
+    padding-top: 50px;
+}
+
+.sc-serv{
+    background-color: #fff;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+    padding-top: 0;
+    margin-top: 60px;
+    margin-bottom: 40px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+.sc-serv h1{
+    font-size: 26px;
+    margin: 0;
+    padding: 0;
+    font-family: "Montserrat";
+}
+.sc-serv hr{
+    height: 0px;
+    background-color: #000000;
+    border: 1px solid black;
+    width: 300px;
 }
