--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,3 +1,6 @@
+html {
+  scroll-behavior: smooth;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -55,16 +58,28 @@ code {
   font-weight: bold;
 }
 ::-webkit-scrollbar {
-  width: 15px;
-  background-color: #b4b4b4;
+  width: 10px;
+  background-color: #dddddd;
 }
 
 ::-webkit-scrollbar-thumb {
-  border-radius: 15px;
-  background-color: #868686;
+  border-radius: 10px;
+  background-color: #474747;
 }
 
 ::-webkit-scrollbar-track {
   border-radius: 10px;
-  background-color: #b4b4b4;
+  background-color: #dddddd;
 }
+/* 
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  background-color: transparent;
+}
+::-webkit-scrollbar-track-piece:start {
+  background: transparent url('./assets/scrollbar.png') repeat-y !important;
+}
+::-webkit-scrollbar-track-piece:end {
+  background: transparent url('./assets/scrollbar.png') repeat-y !important;
+} */
