--- a/my-app/src/Companents/Salon/Salon.css
+++ b/my-app/src/Companents/Salon/Salon.css
@@ -1,8 +1,9 @@
 .sl-body{
     width: 100%;
-    height: 1800px;
+    height: 10000px;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
 .sl-box{
     width: 100%;
@@ -13,6 +14,7 @@
     display: flex;
     flex-direction: column;
     color:#474747;
+    padding-bottom: 50px;
 }
 .sl-box h1{
     color: black;
