--- a/my-app/src/Companents/Salon/PriceList.css
+++ b/my-app/src/Companents/Salon/PriceList.css
@@ -14,35 +14,21 @@
   margin: 3.5svw 5svw 5svw 5svw;
   min-width: 90svw;
   overflow: hidden;
-  transition: height 0.3s ease-out;
+  transition: height 0.3s ease;
 }
 
-.menu {
-  margin: 0;
-  background-color: #ffffff;
-  width: 100%;
-  height: 100px;
-  overflow: hidden;
-  transition: height 1s ease-out;
-  border-bottom: 1px solid black;
-}
-
-.menu.expanded {
-  height: 500px; /* Установите максимальную высоту, подходящую для вашего контента */
-  transition: height 1s ease-in;
-}
 .menu-1 {
   margin: 0;
   background-color: #ffffff;
   width: 100%;
   height: 100px;
   overflow: hidden;
-  transition: height 1s ease-out;
+  transition: height 1.66s ease;
   border-bottom: 1px solid black;
 }
 .menu-1.expanded {
   height: 600px; /* Установите максимальную высоту, подходящую для вашего контента */
-  transition: height 1s ease-in;
+  transition: height 1.66s ease;
 }
 .menu-1.expanded .pr-menu-visible img{
   rotate:180deg;
@@ -54,12 +40,12 @@
   width: 100%;
   height: 100px;
   overflow: hidden;
-  transition: height 1s ease-out;
+  transition: height 2.06s ease;
   border-bottom: 1px solid black;
 }
 .menu-2.expanded {
   height: 720px; /* Установите максимальную высоту, подходящую для вашего контента */
-  transition: height 1s ease-in;
+  transition: height 2.06s ease;
 }
 .menu-2.expanded .pr-menu-visible img{
   rotate:180deg;
@@ -70,12 +56,12 @@
   width: 100%;
   height: 100px;
   overflow: hidden;
-  transition: height 1s ease-out;
+  transition: height 2.06s ease;
   border-bottom: 1px solid black;
 }
 .menu-3.expanded {
   height: 720px; /* Установите максимальную высоту, подходящую для вашего контента */
-  transition: height 1s ease-in;
+  transition: height 2.06s ease;
 }
 .menu-3.expanded .pr-menu-visible img{
   rotate:180deg;
@@ -87,12 +73,12 @@
   width: 100%;
   height: 100px;
   overflow: hidden;
-  transition: height 1s ease-out;
+  transition: height 1.06s ease;
   border-bottom: 1px solid black;
 }
 .menu-4.expanded {
   height: 420px; /* Установите максимальную высоту, подходящую для вашего контента */
-  transition: height 1s ease-in;
+  transition: height 1.06s ease;
 }
 .menu-4.expanded .pr-menu-visible img{
   rotate:180deg;
@@ -104,12 +90,12 @@
   width: 100%;
   height: 100px;
   overflow: hidden;
-  transition: height 1s ease-out;
+  transition: height 0.83s ease;
   border-bottom: 1px solid black;
 }
 .menu-5.expanded {
   height: 350px; /* Установите максимальную высоту, подходящую для вашего контента */
-  transition: height 1s ease-in;
+  transition: height 0.83s ease;
 }
 .menu-5.expanded .pr-menu-visible img{
   rotate:180deg;
@@ -121,12 +107,12 @@
   width: 100%;
   height: 100px;
   overflow: hidden;
-  transition: height 1s ease-out;
+  transition: height 2.67s ease;
   border-bottom: 1px solid black;
 }
 .menu-6.expanded {
   height: 900px; /* Установите максимальную высоту, подходящую для вашего контента */
-  transition: height 1s ease-in;
+  transition: height 2.67s ease;
 }
 .menu-6.expanded .pr-menu-visible img{
   rotate:180deg;
@@ -138,12 +124,12 @@
   width: 100%;
   height: 100px;
   overflow: hidden;
-  transition: height 1s ease-out;
+  transition: height 0.5s ease;
   border-bottom: 1px solid black;
 }
 .menu-7.expanded {
   height: 250px; /* Установите максимальную высоту, подходящую для вашего контента */
-  transition: height 1s ease-in;
+  transition: height 0.5s ease;
 }
 .menu-7.expanded .pr-menu-visible img{
   rotate:180deg;
@@ -155,12 +141,12 @@
   width: 100%;
   height: 100px;
   overflow: hidden;
-  transition: height 1s ease-out;
+  transition: height 0.83s ease;
   border-bottom: 1px solid black;
 }
 .menu-8.expanded {
   height: 350px; /* Установите максимальную высоту, подходящую для вашего контента */
-  transition: height 1s ease-in;
+  transition: height 0.83s ease;
 }
 .menu-8.expanded .pr-menu-visible img{
   rotate:180deg;
@@ -171,12 +157,12 @@
   width: 100%;
   height: 100px;
   overflow: hidden;
-  transition: height 1s ease-out;
+  transition: height 0.27s ease;
   border-bottom: 1px solid black;
 }
 .menu-9.expanded {
   height: 180px; /* Установите максимальную высоту, подходящую для вашего контента */
-  transition: height 1s ease-in;
+  transition: height 0.27s ease;
 }
 .menu-9.expanded .pr-menu-visible img{
   rotate:180deg;
@@ -187,12 +173,12 @@
   width: 100%;
   height: 100px;
   overflow: hidden;
-  transition: height 1s ease-out;
+  transition: height 0.5s ease;
   border-bottom: 1px solid black;
 }
 .menu-10.expanded {
   height: 250px; /* Установите максимальную высоту, подходящую для вашего контента */
-  transition: height 1s ease-in;
+  transition: height 0.5s ease;
 }
 .menu-10.expanded .pr-menu-visible img{
   rotate:180deg;
@@ -203,12 +189,12 @@
   width: 100%;
   height: 100px;
   overflow: hidden;
-  transition: height 1s ease-out;
+  transition: height 1.1s ease;
   border-bottom: 1px solid black;
 }
 .menu-11.expanded {
   height: 430px; /* Установите максимальную высоту, подходящую для вашего контента */
-  transition: height 1s ease-in;
+  transition: height 1.1s ease;
 }
 .menu-11.expanded .pr-menu-visible img{
   rotate:180deg;
@@ -219,12 +205,12 @@
   width: 100%;
   height: 100px;
   overflow: hidden;
-  transition: height 1s ease-out;
+  transition: height 1.33s ease;
   border-bottom: 1px solid black;
 }
 .menu-12.expanded {
   height: 500px; /* Установите максимальную высоту, подходящую для вашего контента */
-  transition: height 1s ease-in;
+  transition: height 1.33s ease;
 }
 .menu-12.expanded .pr-menu-visible img{
   rotate:180deg;
@@ -235,12 +221,12 @@
   width: 100%;
   height: 100px;
   overflow: hidden;
-  transition: height 1s ease-out;
+  transition: height 1.67s ease;
   border-bottom: 1px solid black;
 }
 .menu-13.expanded {
   height: 600px; /* Установите максимальную высоту, подходящую для вашего контента */
-  transition: height 1s ease-in;
+  transition: height 1.67s ease;
 }
 .menu-13.expanded .pr-menu-visible img{
   rotate:180deg;
