--- a/my-app/src/Companents/ServicesComp/ServicesComp.css
+++ b/my-app/src/Companents/ServicesComp/ServicesComp.css
@@ -6,9 +6,10 @@
     font-family: "Montserrat";
 }
 .sc-box h1{
-    font-size: 35px;
+    font-size: 40px;
     text-align: center;
     padding-top: 50px;
+    margin: 25px;
 }
 
 .sc-serv{
