--- a/my-app/src/Companents/AboutSalon/AboutSalon.css
+++ b/my-app/src/Companents/AboutSalon/AboutSalon.css
@@ -2,15 +2,15 @@
     width: 100%;
     height: 1200px;
     text-align: center;
-    padding-top: 75px;
+    padding-top: 60px;
 
 }
 
-.as-box a{
+.as-box h1{
     color: rgb(0, 0, 0);
-    font-family: 'Montserrat-Light';
-    font-size: 48px;
-    text-align: left;
+    font-family: 'Montserrat';
+    font-size: 40px;
+    margin: 0;
 }
 
 .as-content{
