--- a/my-app/src/Companents/FirstComp/FirstComp.css
+++ b/my-app/src/Companents/FirstComp/FirstComp.css
@@ -1,72 +1,151 @@
-.fc-box{
-    width: 100%;
-    height: 800px;
-    background-color: #474747;
-    background-image: url('../../assets/bgImg.png');
-    background-repeat: no-repeat;
-    background-size: auto 100%;
-    background-position: center;
-    font-family: 'Montserrat';
-    color: white;
+
+@media (min-width: 1800px) {
+    .fc-box{
+        width: 100%;
+        height: 800px;
+        background-color: #474747;
+        background-image: url('../../assets/bgImg.png');
+        background-repeat: no-repeat;
+        background-size: auto 100%;
+        background-position: center;
+        font-family: 'Montserrat';
+        color: white;
+    }
+    
+    .fc-top{
+        padding-top: 130px;
+        width: 85%;
+        display: flex;
+        align-content: flex-end;
+        align-items: center;
+        justify-content: space-between;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .fc-top a{
+        font-size: 190px;
+    }
+    .fc-button{
+        display: flex;
+        flex-direction: column;
+    }
+    .fc-button b{
+        font-size: 50px;
+    }
+    .fc-button a{
+        font-size: 26px;
+        padding: 0;
+        margin: 0;
+    }
+    .fc-button button{
+        margin-top: 20px;
+        font-family: 'Montserrat';
+        width: 100%;
+        height: 80px;
+        background-color: #eb7a0900;
+        border: 2px solid white;
+        color: white;
+        font-size: 26px;
+        border-radius: 40px;
+        transition: all 0.9s ease;
+    }
+    .fc-button button:hover{
+        background-color: #ffffff;
+        color: #000000;
+    }
+    .fc-center{
+        padding:0;
+        margin: 0;
+        height: 180px;
+        display: flex;
+        align-items: center;
+        margin-left: 15svw;
+    }
+    .fc-center a{
+        font-size: 190px;
+    }
+    .fc-bottom{
+        margin-left: 120px;
+        display: flex;
+        height: 130px;
+        align-items: flex-end;
+    }
+    .fc-bottom a{
+        font-size: 26px;
+    }
 }
-.fc-top{
-    padding-top: 130px;
-    width: 85%;
-    display: flex;
-    align-content: flex-end;
-    align-items: center;
-    justify-content: space-between;
-    margin-left: auto;
-    margin-right: auto;
-}
-.fc-top a{
-    font-size: 190px;
-}
-.fc-button{
-    display: flex;
-    flex-direction: column;
-}
-.fc-button b{
-    font-size: 50px;
-}
-.fc-button a{
-    font-size: 26px;
-    padding: 0;
-    margin: 0;
-}
-.fc-button button{
-    margin-top: 20px;
-    font-family: 'Montserrat';
-    width: 100%;
-    height: 65px;
-    background-color: #eb7a0900;
-    border: 2px solid white;
-    color: white;
-    font-size: 26px;
-    border-radius: 30px;
-    transition: all 0.9s ease;
-}
-.fc-button button:hover{
-    background-color: #ffffff;
-    color: #000000;
-}
-.fc-center{
-    padding:0;
-    margin: 0;
-    height: 180px;
-    display: flex;
-    align-items: center;
-    margin-left: 300px;
-}
-.fc-center a{
-    font-size: 190px;
-}
-.fc-bottom{
-    margin-left: 120px;
-    display: flex;
-    height: 130px;
-    align-items: flex-end;
-}
-.fc-bottom a{
-    font-size: 26px;
+@media (min-width: 100px) {
+    .fc-box{
+        width: 100%;
+        height: 800px;
+        background-color: #474747;
+        background-image: url('../../assets/bgImg.png');
+        background-repeat: no-repeat;
+        background-size: auto 100%;
+        background-position: center;
+        font-family: 'Montserrat';
+        color: white;
+    }
+    
+    .fc-top{
+        padding-top: 130px;
+        width: 85%;
+        display: flex;
+        align-content: flex-end;
+        align-items: center;
+        justify-content: space-between;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .fc-top a{
+        font-size: 138px;
+    }
+    .fc-button{
+        display: flex;
+        flex-direction: column;
+    }
+    .fc-button b{
+        font-size: 50px;
+    }
+    .fc-button a{
+        font-size: 26px;
+        padding: 0;
+        margin: 0;
+    }
+    .fc-button button{
+        margin-top: 20px;
+        font-family: 'Montserrat';
+        width: 100%;
+        height: 80px;
+        background-color: #eb7a0900;
+        border: 2px solid white;
+        color: white;
+        font-size: 26px;
+        border-radius: 40px;
+        transition: all 0.9s ease;
+    }
+    .fc-button button:hover{
+        background-color: #ffffff;
+        color: #000000;
+    }
+    .fc-center{
+        padding:0;
+        margin: 0;
+        height: 180px;
+        display: flex;
+        align-items: center;
+        margin-left: 15svw;
+    }
+    .fc-center a{
+        font-size: 138px;
+    }
+    .fc-bottom{
+        margin-left: 120px;
+        display: flex;
+        height: 130px;
+        align-items: flex-end;
+    }
+    .fc-bottom a{
+        font-size: 26px;
+    }
 }
