--- a/my-app/src/Companents/Sale/Sale.css
+++ b/my-app/src/Companents/Sale/Sale.css
@@ -51,7 +51,7 @@
 }
 
 .pole button{
-    font-family: 'Montserrat-Light';
+    font-family: 'Montserrat';
     width: 60%;
     height: 60px;
     margin: 0 auto;
@@ -61,7 +61,7 @@
     border: 1px solid white;
     color:white;
     border-radius: 32px;
-    font-size: 18px;
+    font-size: 22px;
     transition: all 0.5s ease;
 }
 
