--- a/my-app/src/Companents/TatianaPage/TatyanaPage.css
+++ b/my-app/src/Companents/TatianaPage/TatyanaPage.css
@@ -1,4 +1,4 @@
-.ekp-box{
+.ttp-box{
     width: 80%;
     height: auto;
     margin-right: auto;
@@ -8,7 +8,7 @@
     font-family: 'Montserrat';
 
 }
-.ekp-prof{
+.ttp-prof{
     margin-top: 50px;
     width: 100%;
     height: 400px;
@@ -20,33 +20,33 @@
     background: rgb(71,71,71);
     background: linear-gradient(180deg, rgba(71,71,71,0.1) 0%, rgba(71,71,71,0) 100%);
 }
-.ekp-prof img{
+.ttp-prof img{
     height: 100%;
     width: auto;
 }
-.ekp-kostil1{
+.ttp-kostil1{
     padding: 30px;
     width: 100%;
     display: flex;
 }
-.ekp-prof-text{
+.ttp-prof-text{
     width: 75%;
     text-align: left;
     font-size: 20px;
 }
-.ekp-prof-text h1{
+.ttp-prof-text h1{
     font-size: 40px;
 }
-.ekp-bold{
+.ttp-bold{
     font-family: 'Montserrat-SemiBold';
     font-size: 25px;
 
 }
-.ekp-button{
+.ttp-button{
     align-self: flex-end;
     width: 20%;
 }
-.ekp-button button{
+.ttp-button button{
     width: 250px;
     height: 55px;
     font-size: 23px;
@@ -57,19 +57,19 @@
     color:black;
     transition: all 0.6s ease;
 }
-.ekp-button button:hover{
+.ttp-button button:hover{
     background-color: #474747;
     color:white
 }
-.ekp-about{
+.ttp-about{
     display: flex;
     flex-direction: column;
     margin-top: 50px;
 }
-.ekp-about h1{
+.ttp-about h1{
     text-align: center;
 }
-.ekp-hr{
+.ttp-hr{
     background-color: #fff;
 
     width: 70%;
@@ -80,30 +80,30 @@
     align-items: center;
     gap: 20px;
 }
-.ekp-hr h1{
+.ttp-hr h1{
     font-size: 26px;
     margin-top: 20px;
     margin-bottom: 20px;
     padding: 0;
     font-family: "Montserrat";
 }
-.ekp-hr hr{
+.ttp-hr hr{
     height: 0px;
     background-color: #000000;
     border: 1px solid black;
     width: 300px;
 }
-.ekp-ul{
+.ttp-ul{
     width: 95%;
     margin-left: auto;
     margin-right: auto;
 }
-.ekp-ul ul li{
+.ttp-ul ul li{
     margin-top: 10px;
     font-family: 'Montserrat';
     font-size: 20px;
 }
-.ekp-services{
+.ttp-services{
     width: 95%;
     margin-left: auto;
     margin-right: auto;
@@ -111,20 +111,20 @@
     flex-direction: column;
     gap: 30px;
 }
-.ekp-services-item{
+.ttp-services-item{
     display: flex;
     justify-content: space-between;
     font-family: 'Montserrat';
     font-size: 20px;
 }
-.ekp-portfolio{
+.ttp-portfolio{
     margin-top: 50px;
 }
-.ekp-portfolio h1{
+.ttp-portfolio h1{
     text-align: center;
     margin: 74px;
 }
-.ekp-works {
+.ttp-works {
     margin-top: 50px;
     width: 100%;
     margin-left: auto;
@@ -132,14 +132,15 @@
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 80px;
     margin-bottom: 180px;
 }
-.ekp-row{
+.ttp-row{
     display: flex;
     justify-content: space-between;
+    gap:80px
 }
-.ekp-row img{
+.ttp-row img{
     width: 450px;
     height: 600px;
 }
