--- a/my-app/src/Companents/FirstComp/FirstComp.css
+++ b/my-app/src/Companents/FirstComp/FirstComp.css
@@ -1,7 +1,7 @@
 
 .fc-box{
     width: 100%;
-    height: 800px;
+    height: 100svh;
     background-color: #474747;
     background-image: url('../../assets/bgImg.png');
     background-repeat: no-repeat;
@@ -9,6 +9,8 @@
     background-position: center;
     font-family: 'Montserrat';
     color: white;
+    display: flex;
+    flex-direction: column;
 }
 
 .fc-top{
@@ -32,6 +34,7 @@
 .fc-button{
     display: flex;
     flex-direction: column;
+    text-align: center;
 }
 .fc-button b{
     font-size: 50px;
@@ -66,47 +69,174 @@
     margin-left: 15svw;
 }
 .fc-bottom{
-    margin-left: 120px;
+    margin-left: 10svw;
+    height: max-content;
     display: flex;
-    height: 130px;
     align-items: flex-end;
+    padding-bottom: auto;
+    flex-grow: 3;
 }
 .fc-bottom a{
     font-size: 26px;
+    margin-bottom: 6svw;
 }
 @media (max-width: 1800px) {
     .fc-name{
         font-size: 170px;
+    }
+    .fc-bottom a{
+        font-size: 26px;
+        margin-bottom: 4svw;
+    }
+    .fc-top{
+        padding-top: 8svw;
+    }
+    .fc-button b{
+        font-size: 50px;
+    }
+    .fc-button a{
+        font-size: 26px;
+    }
+    .fc-button button{
+        margin-top: 20px;
+        height: 80px;
+        font-size: 26px;
+        border-radius: 40px;
     }
 }
 @media (max-width: 1600px) {
     .fc-name{
         font-size: 150px;
     }
+    .fc-bottom a{
+        font-size: 24px;
+        margin-bottom: 6svw;
+    }
+    .fc-top{
+        padding-top: 10svw;
+    }
+    .fc-button b{
+        font-size: 45px;
+    }
+    .fc-button a{
+        font-size: 24px;
+    }
+    .fc-button button{
+        margin-top: 1svh;
+        height: 70px;
+        font-size: 24px;
+        border-radius: 35px;
+    }
 }
 @media (max-width: 1400px) {
     .fc-name{
         font-size: 127px;
+    }
+    .fc-bottom a{
+        font-size: 24px;
+        margin-bottom: 6svw;
+    }
+    .fc-top{
+        padding-top: 14svw;
+    }
+    .fc-button b{
+        font-size: 40px;
+    }
+    .fc-button a{
+        font-size: 21px;
+    }
+    .fc-button button{
+        margin-top: 10px;
+        height: 64px;
+        font-size: 22px;
+        border-radius: 32px;
     }
 }
 @media (max-width: 1200px) {
     .fc-name{
         font-size: 109px;
     }
+    .fc-bottom a{
+        font-size: 22px;
+        margin-bottom: 6svw;
+    }
+    .fc-top{
+        padding-top: 16svw;
+    }
+    .fc-button b{
+        font-size: 36px;
+    }
+    .fc-button a{
+        font-size: 18px;
+    }
+    .fc-button button{
+        margin-top: 9px;
+        height: 60px;
+        font-size: 20px;
+        border-radius: 30px;
+    }
 }
 @media (max-width: 1024px) {
     .fc-name{
         font-size: 100px;
+    }
+    .fc-bottom a{
+        font-size: 20px;
+        margin-bottom: 9svw;
+    }
+    .fc-top{
+        padding-top: 17svw;
+    }
+    .fc-button b{
+        font-size: 33px;
+    }
+    .fc-button a{
+        font-size: 16px;
+    }
+    .fc-button button{
+        margin-top: 9px;
+        height: 54px;
+        font-size: 19px;
+        border-radius: 27px;
     }
 }
 @media (max-width: 940px) {
     .fc-name{
         font-size: 81px;
     }
+    .fc-bottom a{
+        font-size: 20px;
+        margin-bottom: 6svw;
+    }
+    .fc-top{
+        padding-top: 22svw;
+    }
+    .fc-button b{
+        font-size: 30px;
+    }
+    .fc-button a{
+        font-size: 16px;
+    }
+    .fc-button button{
+        margin-top: 5px;
+        height: 48px;
+        font-size: 17px;
+        border-radius: 24px;
+    }
 }
 @media (max-width: 768px) {
+    .fc-top{
+    align-items: flex-end;
+    }
     .fc-name{
-        font-size: 60px;
+        font-size: 65px;
+    }
+    .fc-bottom a{
+        font-size: 18px;
+        margin-bottom: 10svw;
+    }
+    .fc-top{
+        padding-top: 25svw;
     }
 }
 @media (max-width: 600px) {
