--- a/my-app/src/Companents/Info/Info.css
+++ b/my-app/src/Companents/Info/Info.css
@@ -2,7 +2,7 @@
     height: 390px;
     background-image: url('../../assets/brand.png');
     background-repeat: no-repeat;
-    background-size: auto 140%;
+    background-size: auto 160%;
     background-position: center;
     background-color: #474747;
     display: flexbox;
@@ -26,7 +26,7 @@
 .divhr{
     flex: 1;
     background-color: white;
-    width: 850px;
+    width: 45svw;
     margin-left: auto;
     margin-right: auto;
     height: 2px;
