--- a/my-app/src/Companents/ServicesComp/Carousel-hair.css
+++ b/my-app/src/Companents/ServicesComp/Carousel-hair.css
@@ -27,8 +27,10 @@
 .sc-content {
   display: flex;
   height: 360px;
-  width: 1300px;
-  gap: 200px;
+  min-width: 900px;
+  width: auto;
+
+  gap: 9svw;
   font-family: 'Montserrat-Light';
 }
 .sc-item{
@@ -97,3 +99,67 @@
   background-color: #474747;
 }
 
+@media (max-width:1350px) {
+  .sc-content {
+    display: flex;
+    height: 320px;
+    min-width: 950px;
+    width: auto;
+    gap: 10svw;
+    font-family: 'Montserrat-Light';
+  }
+  .sc-item{
+    width: 260px;
+    border-radius: 30px;
+    gap: 25px;
+  }
+  .sc-item a{
+    font-size: 23px;
+  }
+  .sc-item button{
+    width: 180px;
+    height: 48px;
+    border-radius: 29px;
+    font-size: 18px; 
+  }
+  .sc-slides-container {
+
+    height: 330px;
+  }
+  .sc-dot {
+    border: 4px solid #474747;
+    width: 8px;
+    height: 8px;
+  }
+}
+@media (max-width:1024px) {
+  .sc-content {
+    height: 260px;
+    width: auto;
+    min-width: 650px;
+    gap: 5svw;
+  }
+  .sc-item{
+    width: 210px;
+    border-radius: 25px;
+    gap: 16px;
+  }
+  .sc-item a{
+    font-size: 21px;
+  }
+  .sc-item button{
+    width: 160px;
+    height: 44px;
+    border-radius: 29px;
+    font-size: 16px; 
+  }
+  .sc-slides-container {
+
+    height: 330px;
+  }
+  .sc-dot {
+    border: 4px solid #474747;
+    width: 7px;
+    height: 7px;
+  }
+}
