--- a/my-app/src/Companents/ServicesComp/ServicesComp.css
+++ b/my-app/src/Companents/ServicesComp/ServicesComp.css
@@ -5,18 +5,18 @@
     flex-direction: column;
     font-family: "Montserrat";
 }
-.sc-box h1{
+
+.sc-hair{
     font-size: 40px;
     text-align: center;
     padding-top: 50px;
     margin: 25px;
 }
-
 .sc-serv{
     background-color: #fff;
     margin-left: auto;
     margin-right: auto;
-    width: 70%;
+    width: 1250px;
     padding-top: 0;
     margin-top: 60px;
     margin-bottom: 40px;
@@ -34,5 +34,34 @@
     height: 0px;
     background-color: #000000;
     border: 1px solid black;
-    width: 300px;
+    width: 20svw;
+}
+@media (max-width:1350px) {
+    .sc-serv{
+        width: 924px;/* 1024-100 */
+    }
+    .sc-serv h1{
+        font-size: 23px;
+    }
+    .sc-serv hr{
+        width: 25svw;
+    }
+    .sc-hair{
+        font-size: 36px;
+    }
+
+}
+@media (max-width:1024px) {
+    .sc-serv{
+        width: 748px;/* 768-20 */
+    }
+    .sc-serv h1{
+        font-size: 22px;
+    }
+    .sc-serv hr{
+        width: 30svw;
+    }
+    .sc-hair{
+        font-size: 32px;
+    }
 }
