--- a/my-app/src/Companents/Team/Team.css
+++ b/my-app/src/Companents/Team/Team.css
@@ -12,7 +12,9 @@
 }
 
 .separator{ 
-    margin-left: 13%;
+    width: 1450px;
+    margin-left: auto;
+    margin-right: auto;
     height: 34px;
     display: flex;
     justify-content: flex-end;
@@ -23,14 +25,51 @@
 .separator a{
     font-family: 'Montserrat';
     font-size: 28px;
-
 }
 
 .separator hr{
-    width: 250px;
+    width: 450px;
     height: 1px;
     background-color: black;
     margin-left: 1%;
     margin-bottom: 0.8%;
     align-self: flex-end;
+}
+@media (max-width:1500px) {
+    .separator{ 
+        width: 1200px;
+        height: 34px;
+        margin-bottom: 0px;
+    }
+    .separator hr{
+        width: 350px;
+        align-self: flex-end;
+        margin-bottom: 14px;
+    }
+    .team-box h1{
+        font-size: 35px;
+    }
+    .separator a{
+        font-family: 'Montserrat';
+        font-size: 25px;
+    }
+}
+@media (max-width:1250px) {
+    .separator{ 
+        width: 924px;
+        height: 34px;
+        margin-bottom: 0px;
+    }
+    .separator hr{
+        width: 350px;
+        align-self: flex-end;
+        margin-bottom: 14px;
+    }
+    .team-box h1{
+        font-size: 32px;
+    }
+    .separator a{
+        font-family: 'Montserrat';
+        font-size: 25px;
+    }
 }
