--- a/my-app/src/Companents/Interior/Interior.css
+++ b/my-app/src/Companents/Interior/Interior.css
@@ -7,8 +7,8 @@
 
 .img-pole{
     display: flex;
-    width: 1573px;
-    height: 806px;
+    width: 1400px;
+    height: 717px;
     margin-left: auto;
     margin-right: auto;
     gap: 14px;
@@ -27,20 +27,18 @@
 }
 
 .first-item-img{
-    min-width: 630px;
-    max-width: 631px;
-    min-height: 806px;
-    max-height: 806px;
+    min-width: 560px;
+    max-width: 560px;
+    min-height: 717px;
+    max-height: 717px;
     overflow: hidden;
-
-
 }
 
 .second-item-img{
-    width: 929px;
-    height: 806px;
+    width: 826px;
+    height: 717px;
 
-    display: flexbox;
+    display: flex;
     flex-direction: column;
     
 }
@@ -75,10 +73,10 @@
 }
 .int-text{
     margin-top: 16px;
-    width: 1573px;
+    width: 1400px;
     margin-left: auto;
     margin-right: auto;
-    height: 220px;
+    height: 160px;
     background-color: #474747;
     border-bottom-left-radius: 25px;
     border-bottom-right-radius: 25px;
@@ -87,10 +85,102 @@
     padding-top: 15px;
     color: white;
     font-family: 'Montserrat-Light';
-    width: 85%;
+    width: 90%;
     margin-left: auto;
     margin-right: auto;
-    font-size: 28px;
-    line-height: 44px;
+    font-size: 22px;
+    line-height: 40px;
     text-align: justify;
+}
+@media (max-width:1500px) {
+    .int-body{
+        height: auto;
+        padding-bottom: 100px;
+    }
+    .img-pole{
+        width: 924px;
+        height: 473px;
+        gap: 14px;
+        border-top-left-radius: 25px;
+        border-top-right-radius: 25px;
+    }
+    
+    .int-body h1{
+        padding-top: 70px;
+        padding-bottom: 35px;
+        font-size: 35px;
+    }
+    
+    .first-item-img{
+        min-width: 367px;
+        max-width: 367px;
+        min-height: 473px;
+        max-height: 473px;
+    }
+    .int-text{
+        margin-top: 16px;
+        width: 924px;
+        height: 150px;
+        border-bottom-left-radius: 25px;
+        border-bottom-right-radius: 25px;
+    }
+
+    .second-item-img{
+        width: 557px;
+        height: 473px;
+        display: flex;
+        flex-direction: column;   
+    }
+    .int-text1{
+        padding-top: 15px;
+        width: 90%;
+        font-size: 18px;
+        line-height: 28px;
+    }
+}
+@media (max-width:1024px) {
+    .int-body{
+        height: auto;
+        padding-bottom: 100px;
+    }
+    .img-pole{
+        width: 718px;
+        height: 473px;
+        gap: 14px;
+        border-top-left-radius: 25px;
+        border-top-right-radius: 25px;
+    }
+    
+    .int-body h1{
+        padding-top: 70px;
+        padding-bottom: 35px;
+        font-size: 35px;
+    }
+    
+    .first-item-img{
+        min-width: 367px;
+        max-width: 367px;
+        min-height: 473px;
+        max-height: 473px;
+    }
+    .int-text{
+        margin-top: 16px;
+        width: 718px;
+        height: 150px;
+        border-bottom-left-radius: 25px;
+        border-bottom-right-radius: 25px;
+    }
+
+    .second-item-img{
+        width: 557px;
+        height: 473px;
+        display: flex;
+        flex-direction: column;   
+    }
+    .int-text1{
+        padding-top: 15px;
+        width: 90%;
+        font-size: 18px;
+        line-height: 28px;
+    }
 }
