--- a/my-app/src/Companents/Sale/Sale.css
+++ b/my-app/src/Companents/Sale/Sale.css
@@ -69,3 +69,60 @@
     background-color: white;
     color: black;
 }
+@media (max-width:1500px) {
+    .bg-light{
+        width: 100%;
+        height: 100svh;
+
+    }
+    .pole{
+        min-width: 570px;    
+        width: 45svw;
+    }
+    .pole h1{
+        font-size: 40px;
+        padding-top: 20%;
+        margin-top: 0px;
+    }
+    
+    .pole p{
+        font-size: 23px;
+        margin-top: 12%;
+    }
+    .pole button{
+        width: 70%;
+        height: 60px;
+        margin-top: 35%;
+        margin-bottom: auto;
+        font-size: 20px;
+    }
+}
+@media (max-width:1024px) {
+    .bg-light{
+        width: 100%;
+        height: 100svh;
+
+    }
+    .pole{
+        min-width: 370px;    
+
+        width: 80%;    
+    }
+    .pole h1{
+        font-size: 37px;
+        padding-top: 20%;
+        margin-top: 0px;
+    }
+    
+    .pole p{
+        font-size: 22px;
+        margin-top: 12%;
+    }
+    .pole button{
+        width: 70%;
+        height: 60px;
+        margin-top: 40%;
+        margin-bottom: auto;
+        font-size: 20px;
+    }
+}
