--- a/my-app/src/Companents/TopServices/TopServices.css
+++ b/my-app/src/Companents/TopServices/TopServices.css
@@ -1,13 +1,13 @@
 .ts-body{
     background-color: white;
     width: 100%;
-    height: 760px;
+    height: auto;
 }
 
 .ts-body h1{
     text-align: center;
     font-family: 'Montserrat';
-    margin-top: 5%;
+    margin-top: 5svh;
     font-size: 40px;
 }
 
@@ -15,4 +15,26 @@
     text-align: center;
     font-family: 'Montserrat-Light';
     font-size: 25px;
+}
+@media (max-width:1500px) {
+    .ts-body h1{
+        margin-top: 5svh;
+        font-size: 35px;
+    }
+    
+    .ts-body h2{
+        font-size: 22px;
+        margin-bottom: 0;
+    }
+}
+@media (max-width:1024px) {
+    .ts-body h1{
+        margin-top: 5svh;
+        font-size: 30px;
+    }
+    
+    .ts-body h2{
+        font-size: 20px;
+        margin-bottom: 0;
+    }
 }
