--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -61,3 +61,29 @@
   width: 40%;
   font-family: 'Montserrat';
 }
+@media (max-width:1500px) {
+  
+.hm-au-div h1{
+  font-size: 35px;
+  padding-top: 90px;
+}
+
+.hm-au-div h2{
+  padding-top: 0px;
+  font-size: 27px;
+  width: 60%;
+}
+}
+@media (max-width:1024px) {
+  
+  .hm-au-div h1{
+    font-size: 30px;
+    padding-top: 65px;
+  }
+
+  .hm-au-div h2{
+    padding-top: 0px;
+    font-size: 24px;
+    width: 78%;
+  }
+}
